--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Home/Contact.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Home/Contact.cshtml
@@ -31,7 +31,7 @@
                 <div class="panel-body user-card">
                     <div class="media-main">
                         <a class="pull-left" href="#">
-                            <img class="thumb-lg img-circle" src="~/Uploads/Users/avatar-1.jpg" alt="">
+                            <img class="thumb-lg img-circle" src="~/Images/avatar-1.jpg" alt="">
                         </a>
                         <div class="info">
                             <h4>Chiara Volpato</h4>
@@ -61,7 +61,7 @@
                 <div class="panel-body user-card">
                     <div class="media-main">
                         <a class="pull-left" href="#">
-                            <img class="thumb-lg img-circle" src="~/Uploads/Users/avatar-1.jpg" alt="">
+                            <img class="thumb-lg img-circle" src="~/Images/avatar-1.jpg" alt="">
                         </a>
                         <div class="info">
                             <h4>Stefano Baldi</h4>
