--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Login.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Login.cshtml
@@ -83,7 +83,7 @@
 
                     <div class="form-group m-t-30 m-b-0">
                         <div class="col-sm-5 text-left">
-                            <a href="/Account/Register" class="text-muted">Create an account</a>
+                            <a href="~/Account/Register" class="text-muted">Create an account</a>
                         </div>
                     </div>
 
