--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Country/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Country/Index.cshtml
@@ -131,7 +131,7 @@
                     </dd>
                 </dl>
 
-                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterCountry(0)'>Filter</button>
+                <button type="submit" class="btn btn-primary waves-effect" onclick='FilterCountry(0, 1)'>Filter</button>
                 <!--Filter-->
             </div>
         </div>
@@ -175,7 +175,7 @@
 
                     <div style="display: inline-grid">
                         @Html.Label("Show entries", new { @class = "control-label" })
-                        @Html.DropDownList("showEntry", listItems, new { @class = "form-control", @onchange = "FilterCountry(0)" })
+                        @Html.DropDownList("showEntry", listItems, new { @class = "form-control", @onchange = "FilterCountry(0, 1)" })
                     </div>
                     @if (User.IsInRole("Admin") || User.IsInRole("Writer"))
                     {
@@ -190,8 +190,7 @@
                     <br />
                     <br />
                     <div class="col-md-12 text-center">
-                        <!--<ul class="pagination pagination-lg pager" id="myPager"></ul>-->
-                        <ul class="pagination m-b-5" id="myPager"></ul>
+                        <div id="paged"></div>
                     </div>
                 </div>
                 <!--Table-->
