--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Login.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Login.cshtml
@@ -30,7 +30,7 @@
                     <img src="~/Images/Logos/Nomisma.png" height="101" width="204">
                 </div>
                 <div class="text-center m-t-0 m-b-15">
-                    <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
+                    <a href="~/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
                 </div>
                 <h4 class="text-muted text-center m-t-0"><b>Sign In</b></h4>
 
@@ -41,7 +41,7 @@
                     </div>
                 }
 
-                <form class="form-horizontal" method="post" action="/Account/Login">
+                <form class="form-horizontal" method="post" action="~/Account/Login">
                     @Html.AntiForgeryToken()
 
                     <div class="form-group">
