--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPassword.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPassword.cshtml
@@ -26,14 +26,14 @@
 
             <div class="panel-body">
                 <h3 class="text-center m-t-0 m-b-15">
-                    <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
+                    <a href="~/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
 
                     <img src="~/Images/Logos/Nomisma.png" height="101" width="204">
                 </h3>
                 <br>
                 <h4 class="text-muted text-center m-t-0"><b>Insert new Password</b></h4>
 
-                <form class="form-horizontal" method="post" action="/Account/ResetPassword">
+                <form class="form-horizontal" method="post" action="~/Account/ResetPassword">
 
                     <div class="alert alert-info alert-dismissible">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
