--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/Error.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/Error.cshtml
@@ -25,7 +25,7 @@
             <h1 class="text-white">Error</h1>
             <h2 class="text-white">An error occurred while processing your request</h2><br>
 
-            <a class="btn btn-info waves-effect waves-light" href="/Home/Index">Go Back</a>
+            <a class="btn btn-info waves-effect waves-light" href="~/Home/Index">Go Back</a>
         </div>
     </div>
 
