--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Register.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Register.cshtml
@@ -30,11 +30,11 @@
                     <img src="~/Images/Logos/Nomisma.png" height="101" width="204">
                 </div>
                 <div class="text-center m-t-0 m-b-15">
-                    <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
+                    <a href="~/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
                 </div>
                 <h4 class="text-muted text-center m-t-0"><b>Sign Up</b></h4>
 
-                <form class="form-horizontal" method="post" action="/Account/Register">
+                <form class="form-horizontal" method="post" action="~/Account/Register">
                     @Html.AntiForgeryToken()
 
                     @Html.ValidationSummary(false, "", new { @class = "text-danger" })
@@ -144,7 +144,7 @@
 
                     <div class="form-group m-t-30 m-b-0">
                         <div class="col-sm-12 text-center">
-                            <a href="/Account/Login" class="text-muted">Already have account?</a>
+                            <a href="~/Account/Login" class="text-muted">Already have account?</a>
                         </div>
                     </div>
                 </form>
