--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPasswordConfirmation.cshtml
@@ -25,7 +25,7 @@
 
             <div class="panel-body">
                 <h3 class="text-center m-t-0 m-b-15">
-                    <a href="/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
+                    <a href="~/Account/Login" class="logo logo-admin"><span>Tobacco</span>Database</a>
 
                     <img src="~/Images/Logos/Nomisma.png" height="101" width="204">
                 </h3>
